<resources>
    <string name="app_name">Campus Recruitment System</string>
    <string name="welcome">Welcome</string>
    <string name="to_the">to the</string>
    <string name="background_image">Background Image</string>
    <string name="let_s_start">let\'s start</string>
    <string name="app_name_short">C R S</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_and_easy_steps">Quick \nand easy steps</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Pasword ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Dont have an account ?</string>
    <string name="join_now">Join Now</string>
    <string name="header_image">Header Image</string>
    <string name="student">Student</string>
    <string name="company">Company</string>
    <string name="admin">Admin</string>
    <string name="account_type">Account Type:</string>
    <string name="logout">Join</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="profile">Profile</string>
    <string name="signout">SignOut</string>
    <string name="terms_and_condition_for_join_CRM">By clicking Join, you agree to our Terms, Data Policy and Cookie
        Policy. You may receive SMS notifications from us and can opt out at any time.
    </string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="pmb">PMB</string>
    <string name="communicate">Communicate</string>
    <string name="select_photo">Select Photo</string>
    <string name="update_profile">Update Profile</string>
    <string name="download_cv">Download CV</string>
    <string name="temp_name">Zeeshan</string>
    <string name="jobs">Jobs</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="post_job">Post Job</string>
    <string name="job_list">Job List</string>
    <string name="students_list">Students List</string>
    <string name="companies_list">Companies List</string>
    <string name="create_profile">Create Your Profile</string>


    <string name="app_description">
        A college campus recruitment system that consists of a student login, company login and an admin login. The
        project is beneficial for college students, various companies visiting the campus for recruitment and even the
        college placement officer. The software system allows the students to create their profiles and upload all their
        details including their marks onto the system. The admin can check each student details and can remove faulty
        accounts. The system also consists of a company login where various companies visiting the college can view a
        list of students in that college and also their respective resumes. The software system allows students to view
        a list of companies who have posted for vacancy. The admin has overall rights over the system and can moderate
        and delete any details not pertaining to college placement rules. The system handles student as well as company
        data and efficiently displays all this data to respective sides.
    </string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="company_name">Company Name</string>
    <string name="company_head_name">Company Head Name</string>
    <string name="industry_category">Industry Category</string>
    <string name="country">Country</string>
    <string name="company_description">Company Description</string>
    <string name="continue_to_dashboard">Continue to Dashboard</string>
    <string name="create_job_post">Create Job Post</string>
    <string name="job_description">Job Description</string>
    <string name="job_title">Job Title</string>
    <string name="job_skills">Job Skills</string>
    <string name="applicant_career_level">Applicant Career Level</string>
    <string name="applicant_experience">Applicant Experience</string>
    <string name="no_of_position">No. of Position</string>
    <string name="job_location">Job Location</string>
    <string name="estimated_salary">Estimated Salary</string>
    <string name="empty_list">Empty List</string>
    <string name="job_type">Job Type</string>
    <string name="job_shift">Job Shift</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="summarry">Summarry</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="write_your_message">Write your message</string>
    <string name="send_message_button">Send Messagew button</string>
    <string name="reciever_message">Reciever Message</string>

    <!--Spinner-->
    <string-array name="career_level">
        <item>Career Level</item>
        <item>Intern</item>
        <item>Software Engineer</item>
    </string-array>

    <string-array name="applicant_experience">
        <item>Applicant Experience</item>
        <item>1 Year</item>
        <item>2 Year</item>
        <item>3 Year</item>
        <item>4 Year</item>
        <item>5 Year</item>
    </string-array>

    <string-array name="job_shift">
        <item>Job Shift</item>
        <item>Morning</item>
        <item>Evening</item>
        <item>Remote</item>
    </string-array>

    <string-array name="job_type">
        <item>Job Type</item>
        <item>Full Time</item>
        <item>Part Time</item>
        <item>Remote Working</item>
    </string-array>

    <string-array name="country">
        <item>Country</item>
        <item>Pakistan</item>
    </string-array>


    <string-array name="cities_pakistan">
        <item>City</item>
        <item>Karachi</item>
        <item>Hyderabad</item>
        <item>Lahore</item>
        <item>Islamabad</item>
    </string-array>


    <!--Spinner-->
</resources>
