<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:id="@+id/student_nav_menu" android:visible="false" android:checkableBehavior="single">
        <!--<item-->
                <!--android:id="@+id/nav_pmb_student"-->
                <!--android:icon="@drawable/ic_menu_chat"-->
                <!--android:visible="false"-->
                <!--android:title="@string/pmb"/>-->
        <item
                android:id="@+id/nav_job_list_student"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/jobs"/>
        <item
                android:id="@+id/nav_applied_job_student"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/applied_jobs"/>

        <item
                android:id="@+id/nav_company_list_student"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/companies_list"/>

    </group>
    <group android:id="@+id/company_nav_menu" android:visible="false" android:checkableBehavior="single">
        <!--<item-->
                <!--android:id="@+id/nav_pmb_company"-->
                <!--android:visible="false"-->
                <!--android:icon="@drawable/ic_menu_chat"-->
                <!--android:title="@string/pmb"/>-->
        <item
                android:id="@+id/nav_post_job_company"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/post_job"/>
        <item
                android:id="@+id/nav_job_list_company"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/job_list"/>
        <item
                android:id="@+id/nav_student_list_company"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/students_list"/>

    </group>

    <group android:id="@+id/admin_nav_menu" android:visible="false" android:checkableBehavior="single">
        <item
                android:id="@+id/nav_student_list_admin"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/students_list"/>
        <item
                android:id="@+id/nav_company_list_admin"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/companies_list"/>
        <item
                android:id="@+id/nav_job_list_admin"
                android:icon="@drawable/ic_menu_chat"
                android:title="@string/job_list"/>

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share"/>
            <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/help_amp_feedback"/>

        </menu>
    </item>

</menu>