<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.registration.LogOutFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".registration.logoutFragment">

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:src="@drawable/join_hands"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/header_image"/>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView">

                <EditText
                        android:id="@+id/logoutTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_textEmailAddress"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                <EditText
                        android:id="@+id/logoutTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_password"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                    android:id="@+id/logoutAccountTypeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_textPassword"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            >
                <TextView
                        android:id="@+id/radioGroupHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/account_type"
                />
                <RadioButton
                        android:id="@+id/logoutRadioStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/student"
                        android:textColor="@color/colorSecondaryText"
                />
                <RadioButton
                        android:id="@+id/logoutRadioCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textColor="@color/colorSecondaryText"
                />
                <RadioButton
                        android:id="@+id/logoutRadioAdmin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:text="@string/admin"
                />
            </RadioGroup>


            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_condition_for_join_CRM"
                    app:layout_constraintTop_toBottomOf="@+id/logoutAccountTypeRadioGroup"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:id="@+id/forgetPasswordLink"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <Button
                    android:text="@string/logout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/logoutLogoutButton"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    style="@style/ButtonStyle"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/forgetPasswordLink"/>

            <TextView
                    android:text="@string/already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/logoutLogoutButton"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <Button
                    android:text="@string/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/logoutLoginBtn"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    style="@style/ButtonStyle"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>